feat(app): Reactivate duckrun & boccia tournament

--- a/src/app/boccia/boccia.component.html
+++ b/src/app/boccia/boccia.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="large header">Bocciaturnier 2024</h3>
+               <h3 class="large header">Bocciaturnier 2025</h3>
                <hr>
             </div>
      </div>
@@ -22,14 +22,16 @@
             </p>
 
             <p class="normal">
-              📅 Spieltermin: Samstag, 10. August 2024<br>
-              ⏱ Beginn: 11 Uhr<br>
-              💸 Nenngeld: 20€<br>
+              📅 Spieltermin: Samstag, 20.09. 2025<br>
+              ⏱ Beginn: 10:00 Uhr<br>
+              🏟 Spielort: Stadion Stainz<br>
+              💸 Nenngeld: 20,00 €<br>
               📌 Spielform: 2 Spieler<br>
             </p>
 
             <p class="normal">
               Sichert euch euren Platz und meldet euch an! Wir freuen uns auf euch!<br>
+              Für alle Anmeldungen bis zum 17. August gibt es am Turniertag ein Freigetränk!<br>
             </p>
 
             <p class="normal">
@@ -46,7 +48,7 @@
               IBAN: AT67 3843 9000 0481 3481<br>
               BIC: RZSTAT2G439<br>
               Empfänger: HV TDP Stainz<br>
-              Verwendungszweck: Boccia 24 + euren Mannschaftsnamen
+              Verwendungszweck: Boccia 2025 + euren Mannschaftsnamen
             </p>
 
             <p class="normal">
@@ -55,7 +57,7 @@
 
           </div>
           <div fxFlex="50" fxFlexOffset="25px">
-            <img class="imageSmallCenter" src="assets/images/boccia_2024.jpeg " style="width: 400px;" >
+            <img class="imageSmallCenter" src="assets/images/boccia_2025.jpeg " style="width: 400px;" >
           </div>
       </div>
     </div>
