--- a/src/app/duckrun/duckrun.component.html
+++ b/src/app/duckrun/duckrun.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="large header">Entenrennen 2023</h3>
+               <h3 class="large header">Entenrennen 2025</h3>
                <hr>
             </div>
      </div>
@@ -14,11 +14,11 @@
           <div fxFlex="50" fxFlexOffset="10px">
             <p class="normal">
               <p class="normal">
-                2. Entenrennen des HV TDP Stainz
+                3. Entenrennen des HV TDP Stainz
               </p>
               <p class="normal">
-                📅 WANN: Samstag, 26.08.2023<br>
-                ⌚ START: 17 Uhr
+                📅 WANN: Samstag, 20.09.2025<br>
+                ⌚ START: 17:30 Uhr
               </p>
 
               <p class="normal">
@@ -29,9 +29,9 @@
 
               <p class="normal">
                 💸 PREISE<br>
-                🥇 Platz: 333 Euro<br>
-                🥈 Platz: 222 Euro<br>
-                🥉 Platz: 111 Euro<br>
+                🥇 Platz: 500 Euro<br>
+                🥈 Platz: 300 Euro<br>
+                🥉 Platz: 150 Euro<br>
                 + 🎁 viele weitere Sachpreise
               </p>
 
@@ -50,12 +50,13 @@
 
               <p class="normal">
                 ‼ WICHTIG ‼<br>
-                KEINE ANWESENHEITSPFLICHT nötig, die Gewinner werden nach der Veranstaltung kontaktiert!
+                KEINE ANWESENHEITSPFLICHT nötig, die Gewinner werden nach der Veranstaltung auf unserer Homepage bekannt gegeben!<br>
+                Bei Gewinn bitte uns zu kontaktieren, damit wir den Gewinn aushändigen können.
                 <br>
               </p>
 
               <p class="normal">
-                Die Lose werden GRATIS per Post versendet (Mindestbestellmenge: 4 Enten)!
+                Die Lose werden GRATIS per Post versendet (Mindestbestellmenge: 8 Enten)!
                 <br>
               </p>
 
@@ -64,7 +65,7 @@
             <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
             <!-- this creates a google map on the page with the given lat/lng from -->
             <!-- the component as the initial center of the map: -->
-            <img class="imageSmallCenter" src="assets/images/duckrun_2023.png " style="width: 400px;" >
+            <img class="imageSmallCenter" src="assets/images/duckrun_2025.jpeg " style="width: 400px;" >
           </div>
         </div>
       </div>
