--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,9 @@
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button>
+      <!-- <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button> -->
+      <button mat-menu-item routerLink="/entenrennen" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenrennen</button>
+      <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
@@ -32,12 +34,10 @@
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button>
+      <!-- <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button> -->
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
-
-      <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
@@ -63,8 +63,7 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-       <!-- <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
@@ -100,7 +99,9 @@
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button>
+      <!-- <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button> -->
+      <button mat-menu-item routerLink="/entenrennen" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenrennen</button>
+      <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
@@ -114,12 +115,10 @@
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button>
+      <!-- <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button> -->
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>  -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
-
-      <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
@@ -145,8 +144,7 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-       <!-- <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
