feat(championship): Add new season

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -66,20 +66,56 @@
 
 </mat-table>
 
+<div *ngIf="season == '2025-2026'">
+  <p class="normal">
+    <b>Spieltermine Herbst 2025:</b>
+
+  <p class="normal">
+    1. Runde - FREITAG, 05.09.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : SV Geistthal
+  </p>
+
+  <p class="normal">
+    2. Runde - SAMSTAG, 13.09.2025 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Fürndörfler
+  </p>
+
+  <p class="normal">
+    3. Runde - MITTWOCH, 17.09.2025 - 18:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    4. Runde - FREITAG, 26.09.2025 - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    5. Runde - FREITAG, 03.10.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+  </p>
+
+  <p class="normal">
+    6. Runde - SAMSTAG, 11.10.2025 - 15:30 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    7. Runde - FREITAG, 24.10.2025 - TBD - Stadion Söding - STT Fürndörfler : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    Cup 1. Runde - TBD - Stadion Stainz - HV TDP Stainz : STT Multitask
+  </p>
+
+</div>
+
 <div *ngIf="season == '2024-2025'">
+
+
+  <!-- <p class="normal">
+    Cup Halbfinale - MITTWOCH, 09.07.2025 - 19:00 Uhr - Sportplatz St. Johann
+  </p> -->
+
+<!--
   <p class="normal">
     <b>Spieltermine Frühjahr 2025:</b>
   </p>
 
-  <p class="normal">
-    Cup Halbfinale - MITTWOCH, 09.07.2025 - 19:00 Uhr - Sportplatz St. Johann
-  </p>
-
-  <p class="normal">
-    mögliches Cup Finale - SAMSTAG, 12.07.2025 - 15:00 Uhr - Sportplatz St. Johann
-  </p>
-
-<!--
   <p class="normal">
     13. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
@@ -179,6 +215,10 @@
 
   <p class="small">
     14. Runde, HV TDP Stainz : GSV St. Oswald 3:3
+  </p>
+
+  <p class="small">
+    Cup Halbfinale, SK Hohenburg : HV TDP Stainz 3:1
   </p>
 
 </div>
