--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2025-2026">Saison 2025/2026</button>
         <button mat-menu-item routerLink="/championship/2024-2025">Saison 2024/2025</button>
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
@@ -93,6 +94,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2025-2026">Saison 2025/2026</button>
         <button mat-menu-item routerLink="/championship/2024-2025">Saison 2024/2025</button>
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
