--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -54,6 +54,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2025-2026">Saison 2025/2026</button>
           <button mat-menu-item routerLink="/social/2024-2025">Saison 2024/2025</button>
           <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
@@ -136,6 +137,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2025-2026">Saison 2025/2026</button>
           <button mat-menu-item routerLink="/social/2024-2025">Saison 2024/2025</button>
           <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
