feat(app): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -69,43 +69,21 @@
 <div *ngIf="season == '2025-2026'">
 
   <p class="normal">
-    <b>Spieltermine Herbst 2025:</b>
+    <b>Spieltermine Herbst 2025</b>
   </p>
 
   <p class="normal">
-    3. Runde - SAMSTAG, 27.09.2025 - 18:00 - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    4. Runde - FREITAG, 03.10.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
-  </p>
-
-  <p class="normal">
-    5. Runde - SAMSTAG, 11.10.2025 - 15:30 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    Cup 1. Runde, 17.10.2025 - 19:00 - Stadion Stainz - HV TDP Stainz : STT Multitask
-  </p>
-
-  <p class="normal">
-    6. Runde - FREITAG, 24.10.2025 - 19:00 - Stadion Söding - STT Fürndörfler : HV TDP Stainz
+    3. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
   </p>
 
     <p class="normal">
     7. Runde - SAMSTAG, 01.11.2025 - 16:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
   </p>
 
-  <p class="normal">
-    <b>Unsere Torschützen:</b>
-  </p>
-
-  <p *ngFor="let scorer of scorers" class="normal">
-    {{ scorer.goalsDisplay }} {{scorer.playerName}}
-  </p>
+  <hr>
 
   <p class="normal">
-    <b>Ergebnisse:</b>
+    <b>Ergebnisse</b>
   </p>
 
   <p class="small">
@@ -113,8 +91,40 @@
   </p>
 
   <p class="small">
+    Testspiel, USG Berndorf : HV TDP Stainz 12:2
+  </p>
+
+  <p class="small">
     2. Runde, HV TDP Stainz : STT Fürndörfler 1:1
   </p>
+
+  <p class="small">
+    4. Runde, SV Geistthal : HV TDP Stainz 1:3
+  </p>
+
+  <p class="small">
+    5. Runde, HV TDP Stainz : STT Multitask 3:0 (strafverifiziert)
+  </p>
+
+  <p class="small">
+    Cup 1. Runde, HV TDP Stainz : STT Multitask 3:2
+  </p>
+
+  <p class="small">
+    6. Runde, STT Fürndörfler : HV TDP Stainz 4:2
+  </p>
+
+  <hr>
+
+  <p class="normal">
+    <b>Unsere Torschützen</b>
+  </p>
+
+  <p *ngFor="let scorer of scorers" class="normal">
+    {{ scorer.goalsDisplay }} {{scorer.playerName}}
+  </p>
+
+  <hr>
 
 </div>
 
