--- a/src/app/hallenturnier/hallenturnier.component.html
+++ b/src/app/hallenturnier/hallenturnier.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="large header">Stainzer Hallenturnier 2025</h3>
+               <h3 class="large header">Stainzer Hallenturnier 2026</h3>
                <hr>
             </div>
      </div>
@@ -14,11 +14,12 @@
           <div fxFlex="50" fxFlexOffset="10px">
             <p class="normal">
               <p class="normal">
-                Das legendäre Stainzer Hallenturnier kommt auch 2025 wieder!
+                Das legendäre Stainzer Hallenturnier kommt auch 2026 wieder!
               </p>
               <p class="normal">
                 📅 WANN <br>
-                Samstag, 11.01.2025 (Erweiterung auf Freitag 10.01. bei entsprechender Teilnehmerzahl möglich) <br>
+                <!-- Samstag, 10.01.2026 (Erweiterung auf Freitag 09.01. bei entsprechender Teilnehmerzahl möglich) <br> -->
+                 Samstag, 10.01.2026 <br>
               </p>
 
               <p class="normal">
@@ -37,16 +38,16 @@
               </p>
 
               <p class="normal">
-                Anmeldeschluss: Mittwoch, 08.01.2025 (ACHTUNG: Begrenzte Teilnehmerzahl!!!)<br>
+                Anmeldeschluss: Mittwoch, 07.01.2026 (ACHTUNG: Begrenzte Teilnehmerzahl!!!)<br>
                 Das Nenngeld MUSS im Vorhinein überwiesen werden, denn nur dann ist man FIX angemeldet!
-                (Bei der Anmeldung kann man den Vorrundentag entscheiden, solange verfügbar)
+                <!-- (Bei der Anmeldung kann man den Vorrundentag entscheiden, solange verfügbar) -->
               </p>
 
               <p class="normal">
                 Bankdaten<br>
                 ➡ Empfänger: HV TDP Stainz<br>
                 ➡ IBAN: AT67 3843 9000 0481 3481<br>
-                ➡ Verwendungszweck: Hallenturnier 2025 – Mannschaftsname<br><br>
+                ➡ Verwendungszweck: Hallenturnier 2026 – Mannschaftsname<br><br>
 
                 Der Turnierklassiker in Stainz - Anmelden, mitspielen und Spaß haben! 😉
                 <br>
@@ -56,7 +57,7 @@
             <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
             <!-- this creates a google map on the page with the given lat/lng from -->
             <!-- the component as the initial center of the map: -->
-            <img class="imageSmallCenter" src="assets/images/hallenturnier_2025.jpeg " style="width: 450px;" >
+            <img class="imageSmallCenter" src="assets/images/hallenturnier_2026.jpeg " style="width: 450px;" >
           </div>
         </div>
       </div>
