--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -17,7 +17,7 @@
 <br>
 
 <p class="normal">
-    AKTIVE Mitglieder (Stand {{activePer}}):
+    AKTIVE Mitglieder (Stand {{activePer}})
 </p>
 
 <div class="small">
@@ -27,7 +27,7 @@
 </div>
 
 <p class="normal">
-FÖRDERNDE Mitglieder (Stand {{supportPer}}):
+FÖRDERNDE Mitglieder (Stand {{supportPer}})
 </p>
 
 <div class="small">
