feat(UI): Minor content changes

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -76,10 +76,6 @@
     3. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
   </p>
 
-    <p class="normal">
-    7. Runde - SAMSTAG, 01.11.2025 - 16:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
-  </p>
-
   <hr>
 
   <p class="normal">
@@ -112,6 +108,10 @@
 
   <p class="small">
     6. Runde, STT Fürndörfler : HV TDP Stainz 4:2
+  </p>
+
+  <p class="small">
+    7. Runde, SK Hohenburg : HV TDP Stainz 4:2
   </p>
 
   <hr>
