--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,11 +32,13 @@
         <button mat-menu-item routerLink="/goaloftheseason/2022">Tor des Jahres 2022</button>
         <button mat-menu-item routerLink="/goaloftheseason/2023">Tor des Jahres 2023</button>
         <button mat-menu-item routerLink="/goaloftheseason/2024">Tor des Jahres 2024</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2025">Tor des Jahres 2025</button>
       </mat-menu>
 
       <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler des Jahres</button>
       <mat-menu #playeroftheseason="matMenu">
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
+        <button mat-menu-item routerLink="/playeroftheseason/2025">Spieler des Jahres 2025</button>
       </mat-menu>
 
       <!-- <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button> -->
@@ -117,11 +119,13 @@
         <button mat-menu-item routerLink="/goaloftheseason/2022">Tor des Jahres 2022</button>
         <button mat-menu-item routerLink="/goaloftheseason/2023">Tor des Jahres 2023</button>
         <button mat-menu-item routerLink="/goaloftheseason/2024">Tor des Jahres 2024</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2025">Tor des Jahres 2025</button>
       </mat-menu>
 
       <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler des Jahres</button>
       <mat-menu #playeroftheseason="matMenu">
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
+        <button mat-menu-item routerLink="/playeroftheseason/2025">Spieler des Jahres 2025</button>
       </mat-menu>
 
       <!-- <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button> -->
