--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,7 +21,7 @@
     Neben dem Fußball veranstaltet der Verein etliche Turniere für jeden, der mit Freunden ein paar lustige Stunden verbringen möchte.
   </p>
 
-  <h2 class="large">Unsere größten Erfolge (Stand Sommer 2018):</h2>
+  <h2 class="large">Unsere größten Erfolge:</h2>
 
   <ul class="small">
     <li><span class="fa fa-dice-three fa-sm"></span> 3x Meister Süd-Weststeirercup (2015, 2016, 2018)</li>
