--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -1,3 +1,13 @@
 table, th, td {
     border: 1px solid white;
 }
+
+.mat-expansion-panel-content,
+.mat-expansion-panel-body,
+.mat-expansion-panel .mat-expansion-panel-body p {
+  user-select: text !important;
+  -webkit-user-select: text !important;
+}
+.mat-expansion-panel-header {
+  user-select: none;
+}
